# jill

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile-and-run.sh  j  j.cc  jill.cc  package.json  roaring.hh
src/: CMakeLists.txt  field.cc  field.hh  generator.js  query.cc  query.hh  roaring.hh  server.cc  table.cc  table.hh
src/test/: table_test.cc
